--- a/components/homepage/index.html
+++ b/components/homepage/index.html
@@ -47,8 +47,13 @@
                 <nav class="side-navbar">
                     <div class="header">
                         <ul>
-                            <li><i class="fa-solid fa-house"></i> Home</li>
-                            <li><i class="fa-solid fa-magnifying-glass"></i>Search</li>
+                            <li>
+                                <i class="fa-solid fa-house"></i>
+                                <a href="../homepage/index.html">Home</a>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-magnifying-glass"></i><a href="../search/search.html">Search</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="content">
@@ -128,7 +133,7 @@
                     <!--Inserire progetto homePageCard-->
                    <div class="containerCARD">
                             <div class="cardHomePage">
-                                <a href="../playlist-card/index.html"></a>
+                                <a href="../search/search.html"></a>
                                 <div class="upperSectionCard">
                                     <div class="cardConteiner">
                                         <div class="onlyPadding">
@@ -140,7 +145,7 @@
                                                             d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z">
                                                         </path>
                                                     </svg>
-                                                    <a href="../playlist-card/index.html"></a>
+                                                    <a href="../search/search.html"></a>
                                                 </button>
                                             </div>
                                         </div>
