--- a/components/playlist-card/index.html
+++ b/components/playlist-card/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playlist-card</title>
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="index.css" rel="stylesheet" type="text/css"/>
+    <link href="../side-navbar/index.css" rel="stylesheet"/>
+    <link href="../cookie-message/index.css" rel="stylesheet"/>
 </head>
 
 <body>
