--- a/components/playlist-card/index.html
+++ b/components/playlist-card/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="main-container">
-        <div class="object-sidenav">
+        <!-- <div class="object-sidenav">
             <object data="../side-navbar/index.html" height="100%" width="360px" style="overflow: hidden;"></object>
-        </div>
+        </div> -->
         <section id="playlist-page">
             <header class="right-sidebar">
                 <img src="https://i.scdn.co/image/ab67706f00000002d073e656e546e43bc387ad79" alt="Peaceful-piano">
@@ -848,9 +848,9 @@
                 </div>
             </main>
         </section>
-        <div class="cookie-message">
+        <!-- <div class="cookie-message">
             <object data="../cookie-message/index.html" width="540%" style="margin: 0 2%;"></object>
-        </div>
+        </div> -->
     </div>
 </body>
 
