--- a/components/side-navbar/index.css
+++ b/components/side-navbar/index.css
@@ -5,14 +5,16 @@
 }
 
 .side-navbar {
-  font-family: var(--font-family,
-      CircularSp,
-      CircularSp-Arab,
-      CircularSp-Hebr,
-      CircularSp-Cyrl,
-      CircularSp-Grek,
-      CircularSp-Deva,
-      var(--fallback-fonts, sans-serif));
+  font-family: var(
+    --font-family,
+    CircularSp,
+    CircularSp-Arab,
+    CircularSp-Hebr,
+    CircularSp-Cyrl,
+    CircularSp-Grek,
+    CircularSp-Deva,
+    var(--fallback-fonts, sans-serif)
+  );
 
   font-size: 16px;
   display: flex;
@@ -21,7 +23,7 @@
   width: auto;
   min-height: auto;
   overflow-y: hidden;
-    height: 100%;
+  height: 100%;
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -57,7 +59,7 @@ li {
   height: 40px;
 }
 
-li a{
+li a {
   color: #b3b3b3;
   text-decoration: none;
 }
@@ -80,7 +82,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   color: #a7a7a7;
-  padding-inline: 8px;
+  padding-left: 8px;
   padding-bottom: 8px;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -92,11 +94,10 @@ a:hover {
 
 .side-header::-webkit-scrollbar-thumb {
   background-color: rgb(100, 100, 100);
-
 }
 
 .side-header::-webkit-scrollbar-track {
-  background-color: transparent
+  background-color: transparent;
 }
 
 .library {
@@ -117,7 +118,7 @@ a:hover {
   color: white;
 }
 
-.library>.svg-lib:hover {
+.library > .svg-lib:hover {
   fill: white;
 }
 
