--- a/components/playlist/playlist.html
+++ b/components/playlist/playlist.html
@@ -65,8 +65,13 @@
           <nav class="side-navbar">
             <div class="header">
               <ul>
-                <li><i class="fa-solid fa-house"></i> Home</li>
-                <li><i class="fa-solid fa-magnifying-glass"></i>Search</li>
+                <li>
+                    <i class="fa-solid fa-house"></i>
+                    <a href="../homepage/index.html">Home</a>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-magnifying-glass"></i><a href="../search/search.html">Search</a>
+                  </li>
               </ul>
             </div>
             <div class="content">
