--- a/components/homepage-card/homepageCard.css
+++ b/components/homepage-card/homepageCard.css
@@ -81,6 +81,11 @@ body {
   cursor: pointer;
 }
 
+.playHomePageCard svg path{
+  padding-left: 4px;
+  padding-top: 20px;
+}
+
 .playHomePageCard:hover {
   opacity: 1;
 }
