--- a/components/search-card/index.css
+++ b/components/search-card/index.css
@@ -23,6 +23,7 @@
     var(--fallback-fonts, sans-serif)
   );
   overflow-x: hidden;
+  border-radius: 8px;
 }
 .body-search::-webkit-scrollbar {
   width: 10px;
